--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@heroicons/react": "^2.2.0",
     "@heroui/react": "^2.8.0-beta.7",
+    "@mui/material": "^7.1.1",
     "@radix-ui/react-slot": "^1.2.3",
     "antd": "^5.26.0",
     "classnames": "^2.5.1",
